# missing-children-ukraine

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  test
.github/workflows/: black-python-format.yml
backend/: .gitignore  README.md  build_deployment.sh  config.yaml  data_classes.py  lambda_function.py  pyproject.toml  requirements.txt
backend/clients/mongodb/: mongo_client.py
backend/dataclasses/: data_classes.py
backend/manager/: load_config.py
backend/models/: models.py
frontend/: next.config.js  package-lock.json  package.json
frontend/frontend-migrate/: package-lock.json  package.json
frontend/frontend-migrate/pages/: index.js  terms-agreement.js
frontend/frontend-migrate/public/: manifest.json
frontend/frontend-migrate/styles/: Home.module.css
frontend/pages/: _app.js  index.js  missing-child-form.js  reporter-form.js  terms-agreement.js
frontend/public/: manifest.json
frontend/src/: App.css  App.js  index.js
frontend/src/CSS/: App.css  FrontPage.css  index.css
frontend/src/Components/: Localization.js  NationalityDropdown.js
frontend/src/Pages/: FormChild.js  FrontPage.js  Home.js
frontend/styles/: Home.module.css
